去掉配置类里的扫描路径。Mapper接口的话，只需要在Mapper注解里说明所涉及需要使用的实体类即可